force-app/main/default/objects/Partner_Performance__c/Partner_Performance__c.object-meta.xml
<CustomObject>
    <description>Store AOP and Target for the Partner Profile</description>
    <label>Partner Performance</label>
    <nameField>
        <displayFormat>PP-{00000}</displayFormat>
        <label>Partner Performance</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Performance</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>