force-app/main/default/objects/Partner_Performance__c/fields/AOP_Amount__c.field-meta.xml
<CustomField>
    <fullName>AOP_Amount__c</fullName>
    <label>AOP Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>