force-app/main/default/objects/Partner_Performance__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <inlineHelpText>First day of the year for this goal.</inlineHelpText>
    <label>Year Beginning</label>
    <type>Date</type>
</CustomField>