force-app/main/default/objects/Partner_Performance__c/fields/Partner_Performance_Naming_Convention__c.field-meta.xml
<CustomField>
    <fullName>Partner_Performance_Naming_Convention__c</fullName>
    <formula>IF(LEN(Account__r.Name)&gt;72, LEFT(Account__r.Name, 69)&amp;&quot;...&quot;, Account__r.Name)    

&amp;&quot; - &quot;&amp; TEXT(YEAR(Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Partner Performance Naming Convention</label>
    <type>Text</type>
</CustomField>