force-app/main/default/objects/Partner_Performance__c/fields/Performance_Uniquifier__c.field-meta.xml
<CustomField>
    <fullName>Performance_Uniquifier__c</fullName>
    <inlineHelpText>This field helps keep the performance records unique: one record per account per year.</inlineHelpText>
    <label>Account &amp; Year</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>