force-app/main/default/objects/Partner_Performance__c/fields/Yearly_Target__c.field-meta.xml
<CustomField>
    <fullName>Yearly_Target__c</fullName>
    <label>Yearly Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>